--- a/trunk/Documentation/PHP/searchform.html
+++ b/trunk/Documentation/PHP/searchform.html
@@ -9,7 +9,7 @@
     <h1>Search for routine</h1>
 
     <form name="input" target="dynamic" action="viewsearch.php" method="get">
-      Search for routine: 
+      Enter name of routine: 
       <input type="text" name="routine">
       <input type="submit" value="Submit">
     </form>
