--- a/trunk/Documentation/PHP/logo.html
+++ b/trunk/Documentation/PHP/logo.html
@@ -9,7 +9,7 @@
 
     <IMG src="banane.gif" alt="Banane logo">
 
-    <A TAGRET="_blank" HREF="http://www.project-banane.blogspot.com/">Banane weblog</A>
+    <A TARGET="_blank" HREF="http://www.project-banane.blogspot.com/">Banane weblog</A>
     
   </body>
 
