--- a/trunk/Documentation/PHP/logo.html
+++ b/trunk/Documentation/PHP/logo.html
@@ -7,10 +7,12 @@
 
   <body>
 
+    <logo>
     <IMG src="banane.gif" alt="Banane logo">
 
     <A TARGET="_blank" HREF="http://www.project-banane.blogspot.com/">Banane weblog</A>
     
+      </logo>
   </body>
 
 </html>
