--- a/trunk/Documentation/PHP/logo.html
+++ b/trunk/Documentation/PHP/logo.html
@@ -7,12 +7,12 @@
 
   <body>
 
-    <logo>
-    <IMG src="banane.gif" alt="Banane logo">
+    <DIV class"logo">
+    <IMG src="banane.gif" alt="Banane logo"><BR>
 
     <A TARGET="_blank" HREF="http://www.project-banane.blogspot.com/">Banane weblog</A>
     
-      </logo>
+    </DIV>
   </body>
 
 </html>
