--- a/trunk/Documentation/PHP/logo.html
+++ b/trunk/Documentation/PHP/logo.html
@@ -7,7 +7,7 @@
 
   <body>
 
-    <DIV class"logo">
+    <DIV class="logo">
     <IMG src="banane.gif" alt="Banane logo"><BR>
 
     <A TARGET="_blank" HREF="http://www.project-banane.blogspot.com/">Banane weblog</A>
