--- a/trunk/Documentation/PHP/logo.html
+++ b/trunk/Documentation/PHP/logo.html
@@ -8,8 +8,8 @@
   <body>
 
     <DIV class="logo">
-    <IMG src="banane.gif" alt="Banane logo" width=75% height=75%><BR>
-
+    <IMG src="banane.gif" alt="Banane logo">
+    <BR>
     <A TARGET="_blank" HREF="http://www.project-banane.blogspot.com/">Banane weblog</A>
     
     </DIV>
