--- a/trunk/Documentation/PHP/logo.html
+++ b/trunk/Documentation/PHP/logo.html
@@ -8,7 +8,8 @@
   <body>
 
     <DIV class="logo">
-    <IMG src="banane.gif" alt="Banane logo">
+      <a target="_top" href="mainpage.php"> 
+	<IMG src="banane.gif" alt="Banane logo"></a>
     <BR>
     <A TARGET="_blank" HREF="http://www.project-banane.blogspot.com/">Banane weblog</A>
     
