new link to berlios project summary

--- a/trunk/Documentation/PHP/logo.html
+++ b/trunk/Documentation/PHP/logo.html
@@ -10,8 +10,11 @@
     <DIV class="logo">
       <a target="_top" href="mainpage.php"> 
 	<IMG src="banane.gif" alt="Banane logo"></a>
-    <BR>
-    <A TARGET="_blank" HREF="http://www.project-banane.blogspot.com/">Banane weblog</A>
+      <BR>
+      <A TARGET="_blank" HREF="http://www.project-banane.blogspot.com/">Banane weblog</A>
+      <A TARGET="_blank"
+	HREF="http://developer.berlios.de/projects/banane/">Project
+	summary</A>
     
     </DIV>
   </body>
