added new scripts for homepage display

--- a/trunk/Documentation/PHP/logo.html
+++ b/trunk/Documentation/PHP/logo.html
@@ -1,3 +1,6 @@
+<!-- logo.html displays the banane logo and the links to the blog and
+berlios project summary. it is called from mainpage.php -->
+
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
   <head>
@@ -9,14 +12,13 @@
 
     <DIV class="logo">
       <a target="_top" href="mainpage.php"> 
-	<IMG src="banane.gif" alt="Banane logo"></a>
+	<IMG src="banane.gif" alt="banane logo"></a>
       <BR>
-      <A TARGET="_blank" HREF="http://www.project-banane.blogspot.com/">Banane weblog</A>
+      <A TARGET="_blank" HREF="http://www.project-banane.blogspot.com/">banane weblog</A>
       <BR>
       <A TARGET="_blank"
-	HREF="http://developer.berlios.de/projects/banane/">Project
+	HREF="http://developer.berlios.de/projects/banane/">project
 	summary</A>
-    
     </DIV>
   </body>
 
