css for section titles

--- a/trunk/Documentation/PHP/intro.html
+++ b/trunk/Documentation/PHP/intro.html
@@ -32,7 +32,7 @@ about the banane project. it is called from mainpage.php -->
     name of a routine. 
 
     <P>Presently, the collection of routines is incomplete and under
-    construction, so be shure to check back later. For the latest
+    construction, so be sure to check back frequently. For the latest
       information, visit the <A HREF="http://www.project-banane.blogspot.com/" TARGET="_blank">banane weblog</A>.
 
   </body>
