--- a/trunk/Documentation/PHP/intro.html
+++ b/trunk/Documentation/PHP/intro.html
@@ -23,7 +23,7 @@ about the banane project. it is called from mainpage.php -->
     <P>The banane project is a collection of <A
 	HREF="http://www.mathworks.com/products/matlab/"
 	TARGET="_blank">MATLAB</A> routines for
-    processing, analyis and visualization of neurophysiological data,
+    processing, analysis and visualization of neurophysiological data,
     in particular multiple sequences of action potentials, as are
     commonly recorded with multielectrode arrays.
 
