new homepage design

--- a/trunk/Documentation/PHP/mitte.htm
+++ b/trunk/Documentation/PHP/mitte.htm
@@ -7,7 +7,7 @@
 
 <frameset rows="*" cols="*,166,728,16,*" framespacing="0" frameborder="no" border="0">
   <frame src="leer.htm" scrolling="no" noresize>
-  <frame src="links.php" scrolling="no" noresize>
+  <frame src="links.htm" scrolling="no" noresize>
   <frame name='dynamic' src="intro.html" noresize>
   <frame src="rechts.htm" scrolling="no" noresize>
 
