new homepage design

--- a/trunk/Documentation/PHP/intro.html
+++ b/trunk/Documentation/PHP/intro.html
@@ -9,7 +9,7 @@ about the banane project. it is called from mainpage.php -->
   </head>
 
   <body>
-    
+    <DIV class='dynamic'>
     <P>Welcome to the banane online documentation.
 
     <P>The recursive acronym "banane" stands for<BR>
@@ -39,7 +39,7 @@ about the banane project. it is called from mainpage.php -->
       information, visit the <A
 	HREF="http://www.project-banane.blogspot.com/"
 	TARGET="_blank">banane weblog</A>. 
-
+</DIV>
   </body>
 
 </html>
