new homepage design

--- a/trunk/Documentation/PHP/intro.html
+++ b/trunk/Documentation/PHP/intro.html
@@ -10,7 +10,7 @@ about the banane project. it is called from mainpage.php -->
 
   <body>
     <DIV class='dynamic'>
-    <P>Welcome to the banane online documentation.
+    <H1>Welcome to the banane online documentation.</H1>
 
     <P>The recursive acronym "banane" stands for<BR>
       <B>b</B>anane<BR>
@@ -27,7 +27,7 @@ about the banane project. it is called from mainpage.php -->
     in particular multiple sequences of action potentials, as are
     commonly recorded with multielectrode arrays.
 
-    <P>Click on the directory names on the right to view a list of routines
+    <P>Click on the directory names on the left to obtain a list of routines
     contained in the respective directory. You may also search for the
     name of a routine.
 
