new homepage design

--- a/trunk/Documentation/PHP/intro.html
+++ b/trunk/Documentation/PHP/intro.html
@@ -27,7 +27,7 @@ about the banane project. it is called from mainpage.php -->
     in particular multiple sequences of action potentials, as are
     commonly recorded with multielectrode arrays.
 
-    <P>Click on the directory names on the left to obtain a list of routines
+    <P>Click on the directory names on the left to view a list of routines
     contained in the respective directory. You may also search for the
     name of a routine.
 
