--- a/trunk/Documentation/PHP/unten.htm
+++ b/trunk/Documentation/PHP/unten.htm
@@ -1,13 +1,16 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<title>Unbenanntes Dokument</title>
+<title></title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<link rel="stylesheet" href="bananestyle.css">
 </head>
 
 <body leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
 <div align="center"><img src="Pics/u02.gif" width="910" height="24"><br>
-  <font size="1" face="Arial, Helvetica, sans-serif">created march
-	2007 - design: mtahlers - programming: athiel</font></div>
+<!--  <font size="1" face="Arial, Helvetica, sans-serif">created march
+	2007 - design: mtahlers - programming: athiel</font></div> -->
+  <font size=25%>created march
+	2007 - design: <a href='http://www.mtahlers.de/'>mtahlers</a> - programming: <a href='http://www.staff.uni-oldenburg.de/andreas.thiel/'>athiel</a></font></div>
 </body>
 </html>
