--- a/trunk/Documentation/PHP/unten.htm
+++ b/trunk/Documentation/PHP/unten.htm
@@ -9,7 +9,7 @@
 <body leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
 <div align="center"><img src="Pics/u02.gif" width="910" height="24"><br>
 <!--  <font size="1" face="Arial, Helvetica, sans-serif">created march
-	2007 - design: mtahlers - programming: athiel</font></div> -->
+	2007 - design: m.t.ahlers - programming: a.thiel</font></div> -->
   <font size=25%>created march
 	2007 - design: <a href='http://www.mtahlers.de/'>mtahlers</a> - programming: <a href='http://www.staff.uni-oldenburg.de/andreas.thiel/'>athiel</a></font></div>
 </body>
