--- a/trunk/Documentation/PHP/unten.htm
+++ b/trunk/Documentation/PHP/unten.htm
@@ -12,9 +12,9 @@
 <!--  <font size="1" face="Arial, Helvetica, sans-serif">created march
 	2007 - design: m.t.ahlers - programming: a.thiel</font></div> -->
 <font size=1>
-created march 2007 - design: <a
+created march 2007 - design: <a target='_blank'
 	  href='http://www.mtahlers.de/'>m.t.ahlers</a> - programming:
-	<a
+	<a target='_blank'
 	  href='http://www.staff.uni-oldenburg.de/andreas.thiel/'>a.thiel</a>
 </font>
 </div>
