new homepage design

--- a/trunk/Documentation/PHP/unten.htm
+++ b/trunk/Documentation/PHP/unten.htm
@@ -13,9 +13,9 @@
 	2007 - design: m.t.ahlers - programming: a.thiel</font></div> -->
 <font size=1>
 created march 2007 - design: <a target='_blank'
-	  href='http://www.mtahlers.de/'>m.t.ahlers</a> - programming:
+	  href='http://www.mtahlers.de/'>mtahlers</a> - programming:
 	<a target='_blank'
-	  href='http://www.staff.uni-oldenburg.de/andreas.thiel/'>a.thiel</a>
+	  href='http://www.staff.uni-oldenburg.de/andreas.thiel/'>athiel</a>
 </font>
 </div>
 </body>
