layout of web docu

--- a/trunk/Documentation/PHP/unten.htm
+++ b/trunk/Documentation/PHP/unten.htm
@@ -12,10 +12,10 @@
 <!--  <font size="1" face="Arial, Helvetica, sans-serif">created march
 	2007 - design: m.t.ahlers - programming: a.thiel</font></div> -->
 <font size=1>
-created march 2007 - design: <a target='_blank'
-	  href='http://www.mtahlers.de/'>mtahlers</a> - programming:
+created march 2007 - programming:
 	<a target='_blank'
-	  href='http://www.staff.uni-oldenburg.de/andreas.thiel/'>athiel</a>
+	  href='http://www.staff.uni-oldenburg.de/andreas.thiel/'>athiel</a> - design: <a target='_blank'
+	  href='http://www.mtahlers.de/'>mtahlers</a> 
 </font>
 </div>
 </body>
