introducing absolute links

--- a/trunk/Documentation/PHP/oben.htm
+++ b/trunk/Documentation/PHP/oben.htm
@@ -6,6 +6,22 @@
 </head>
 
 <body leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
-<div align="center"><img src="Pics/o02.gif" width="910" height="16"> </div>
+<?php 
+
+$bananepath="/home/groups/banane/htdocs/wwwcopy/Banane/";
+
+## get info from config script.
+$confscr=$bananepath."Documentation/Scripts/wwwdocu_conf.scr";
+
+$webscr=$confscr." web";
+$allout=`$webscr`;
+$out=explode("\n",$allout);
+$webpath=$out[0];
+
+$picpath=$webpath."Documentation/PHP/Pics/";
+
+echo "<div align='center'><img src='".$picpath."o02.gif' width='910'
+      height='16'>";
+echo "</div>";
 </body>
 </html>
